# embargoed-rust

./: COPYRIGHT.md  Cargo.toml  LICENSE-APACHE2.md  LICENSE-MIT.md  README.md
src/: embargoed.html  lib.rs
